feat(dashboard): 重构业务待办详情模型